Se arregla problema de CORS